fix: update wording and spacings

--- a/src/scss/main/_widgets.scss
+++ b/src/scss/main/_widgets.scss
@@ -391,6 +391,6 @@
     }
 
     p {
-        margin: 25px 0 0;
+        margin: 8px 0 0;
     }
 }
